@startuml

title __COMMANDS's Class Diagram__\n

  namespace application {
    namespace commands {
      class application.commands.AddLayer {
          + executeCommand()
          + executeCommand()
          + unExecuteCommand()
      }
    }
  }
  

  namespace application {
    namespace commands {
      class application.commands.AddNeuron {
          + executeCommand()
          + executeCommand()
          + unExecuteCommand()
      }
    }
  }
  

  namespace application {
    namespace commands {
      abstract class application.commands.Command {
          # dataStore : Object
          {abstract} + executeCommand()
          {abstract} + unExecuteCommand()
      }
    }
  }
  

  namespace application {
    namespace commands {
      class application.commands.RemoveLayer {
          + executeCommand()
          + executeCommand()
          + unExecuteCommand()
      }
    }
  }
  

  namespace application {
    namespace commands {
      class application.commands.RemoveNeuron {
          + executeCommand()
          + executeCommand()
          + unExecuteCommand()
      }
    }
  }
  

  namespace application {
    namespace commands {
      class application.commands.SetMaxEpochs {
          - prevValue : int
          + executeCommand()
          + executeCommand()
          + unExecuteCommand()
      }
    }
  }
  

  namespace application {
    namespace commands {
      class application.commands.SetMinError {
          - prevValue : double
          + executeCommand()
          + executeCommand()
          + unExecuteCommand()
      }
    }
  }
  

  namespace application {
    namespace commands {
      class application.commands.SetSeed {
          - prevValue : int
          + executeCommand()
          + executeCommand()
          + unExecuteCommand()
      }
    }
  }
  

  application.commands.AddLayer -up-|> application.commands.Command
  application.commands.AddNeuron -up-|> application.commands.Command
  application.commands.RemoveLayer -up-|> application.commands.Command
  application.commands.RemoveLayer o-- neuralNetwork.components.layers.Layer : component
  application.commands.RemoveNeuron -up-|> application.commands.Command
  application.commands.RemoveNeuron o-- neuralNetwork.components.neuron.Neuron : neuron
  application.commands.SetMaxEpochs -up-|> application.commands.Command
  application.commands.SetMinError -up-|> application.commands.Command
  application.commands.SetSeed -up-|> application.commands.Command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
